@@ -26,6 +26,7 @@
     - Fixes GH Bug #173: Personal journal abbreviation list is not loaded twice
     - Bugfix: Preview of external journal abbreviation list now displays the correct list
     - Feature: DOItoBibTeX fetcher now also handles HTTP URLs
+    - Tweak of preference defaults: Autolink requires that the filename starts with the given BibTeX key and the default filename patterns is key followed by title
 [dev_2.11]
     - Backports from 2.80: Fixes #103: JDialog for auto set links is openend and closed correctly
 2.11 beta 4
